# xrootd

./: .gitignore  CMakeCache.txt  xrootd.spec
.github/workflows/: ABI.yml  CI.yml
cmake/: XRootDFindLibs.cmake  XRootDOSDefs.cmake
debian/: xrootd-server-plugins.install
python/tests/: env.py
src/: CMakeLists.txt  XrdTpc.cmake  XrdUtils.cmake
src/XProtocol/: XProtocol.hh
src/XrdCl/: XrdClFile.cc  XrdClFile.hh  XrdClOperationHandlers.hh
src/XrdClHttp/: XrdClHttpFactory.cc  XrdClHttpUtil.cc
src/XrdHttp/: CMakeLists.txt  XrdHttpExtHandler.cc  XrdHttpMon.cc  XrdHttpMon.hh  XrdHttpProtocol.cc  XrdHttpProtocol.hh  XrdHttpReq.cc  XrdHttpReq.hh  XrdHttpTypes.hh  XrdHttpUtils.cc  XrdHttpUtils.hh
src/XrdHttpTpc/: XrdHttpTpcConfigure.cc  XrdHttpTpcMultistream.cc  XrdHttpTpcPool.cc  XrdHttpTpcPool.hh  XrdHttpTpcState.cc  XrdHttpTpcState.hh  XrdHttpTpcTPC.cc  XrdHttpTpcTPC.hh  XrdTpcPool.cc  XrdTpcPool.hh
src/XrdMacaroons/: XrdMacaroonsAuthz.cc  macaroon-init
src/XrdOfs/: XrdOfs.cc
src/XrdOfsPlugin/: CMakeLists.txt  MyXrdOfsPlugin.cc  MyXrdOfsPlugin.hh  XrdOfsPlugin.hh  XrdOfsPluginFile.cc  XrdOfsPluginFileSystem.cc
src/XrdOuc/: XrdOucUtils.cc
src/XrdSfs/: XrdSfsInterface.hh
src/XrdTpc/: XrdTpcMultistream.cc  XrdTpcPMarkManager.cc  XrdTpcPMarkManager.hh  XrdTpcPool.cc  XrdTpcPool.hh  XrdTpcState.cc  XrdTpcState.hh  XrdTpcTPC.cc  XrdTpcTPC.hh
src/XrdXrootd/: CMakeLists.txt  XrdXrootdConfigMon.cc  XrdXrootdHttpMon.cc  XrdXrootdHttpMon.hh  XrdXrootdProtocol.cc  XrdXrootdXeq.cc
tests/TPCTests/: CMakeLists.txt  common.cfg  scitokens.cfg  test.sh  test_thread_limit.sh  test_tpc_cancellations.sh
tests/XRootD/: CMakeLists.txt  http.cfg  http.sh  pybind.cfg  pybind.sh  test.sh
tests/XrdHttpTests/: XrdHttpTests.cc
tests/XrdHttpTpc/: CMakeLists.txt  XrdHttpTpcPoolTests.cc
tests/XrdOssTests/: XrdOssTests.cc
tests/XrdOucTests/: XrdOucUtilsTests.cc
tests/authenticated_cluster/: CMakeLists.txt  common.cfg  setup.sh  test.sh
tests/cluster/: CMakeLists.txt  common.cfg  setup.sh  tpctest.sh
